<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Dispatch/Login Activity and Manifest Strings -->
    
    <string name="app_name">GroupGoal</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">Create, share, and achieve your goals!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="search_distance">Search Distance</string>
    <string name="logout_full">Log out of GroupGoal</string>
    <string name="post">Post</string>
    <string name="create">Create</string>
    <string name="prompt_post">Post</string>
    <string name="activity_post_title">Create a Goal</string>
    <string name="title_activity_view_goal">View Goal</string>
    <string name="attend">Attend</string>
    <string name="view_profile">View My Profile</string>
    <string name="title_activity_user_profile">My Profile</string>
    <string name="action_my_profile">My Profile</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_upcoming">Upcoming Goals</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="progress_post">Posting</string>
    
    <!-- Start Guide Tutorial Activity Strings -->
    <string name="title_activity_start_guide">Start Guide Activity</string>
    <string name="user_guide">Welcome to the User QuickStart Guide!</string>
    <string name="use_right_menu">Use the menu in the top right corner to view your profile, scroll through posted goals, create a new goal, and view your notifications!</string>
    <string name="GotIt_button">Got it, thanks!</string>    

    <!-- Main Activity Strings -->
    <string name="goal_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="goal_reset">Refresh</string>

    <!-- Action Bar Strings -->
    <string name="action_post">Post</string>
    <string name="action_upcoming_goals">Upcoming Goals</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_logout">Log Out</string>

    <!-- PostActivity Strings -->
    <string name="goal_name">Goal Name</string>
    <string name="goal_date_hint">Choose a Date</string>
    <string name="goal_description">Description</string>
    <string name="goal_description_hint">Describe your goal…</string>
    <string name="location">Location</string>
    <string name="goal_time">Time</string>
    <string name="goal_time_hint">Choose a Time</string>
    <string name="goal_private">Private:</string>
    <string name="goal_category">Category:</string>
    <string name="goal_size">Target Group Size:</string>
    <string name="goal_size_hint">0</string>

    <!-- GoalView Strings -->
    <string name="goal_owner">Goal Owner</string>
    <string name="goal_location">Location</string>
    <string name="goal_date">Date</string>
    <string name="join">Join?</string>
    <string name="title_activity_view_and_add_friends">ViewAndAddFriendsActivity</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="view_comments">Comments</string>
    <string name="view_attendees">Attendees</string>

    <!-- Comment Strings -->
    <string name="write_comment">Write a Comment</string>
    <string name="post_comment">Post Comment</string>
    <string name="title_activity_view_attendees">ViewAttendeesActivity</string>

    <!-- Colors -->
    <color name="emerald">#2ecc71</color>
    <color name="wet_asphalt">#34495e</color>
    <color name="clouds">#ecf0f1</color>

    <!-- Profile Page Strings -->
    <string name="aboutMe_title"><u>About Me:</u></string>
    <string name="edit_signature_button">Edit</string>
    <string name="upcoming_goals_title"><b><u>Upcoming Goals:</u></b></string>
    <string name="past_goals_title"><b><u>Past Goals:</u></b></string>
    <string name="created_goals_title"><b><u>Created Goals:</u></b></string>
    <string name="action_my_friends">My Friends</string>
    <string name="title_activity_my_friends">My Friends</string>
    <string name="title_activity_invite">InviteActivity</string>
    
    <!-- Invite Activity Strings -->
    <string name="goal_invite">Invite Friends</string>
    <string name="prompt_searchForFriends">Type a friend\'s username</string>
        
    <!-- Notifications Activity Strings -->
    <string name="title_activity_notifications_page">NotificationsPageActivity</string>
    <string name="title_activity_notifications">Your Notifications!</string>
    <string name="action_notifications">Notifications</string>
    


</resources>
