<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_home"
        android:orderInCategory="96"
        android:showAsAction="never"
        android:title="@string/action_home"/>
    
    <item
        android:id="@+id/action_my_profile"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/action_my_profile"/>
    
     <item
        android:id="@+id/action_my_friends"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/action_my_friends"/>
    
     <item
        android:id="@+id/action_notifications"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_notifications"/>
     
      <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
      
       <item
        android:id="@+id/action_post"
        android:orderInCategory="95"
        android:showAsAction="always"
        android:title="@string/action_post"/>
       
       <item
        android:id="@+id/action_filter"
        android:orderInCategory="94"
        android:showAsAction="always"
        android:title="@string/action_filter"
        android:actionViewClass="android.widget.Spinner"/>   
      
</menu>
