<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cs121.groupgoal.MyFriendsActivity" 
            android:icon="@drawable/editedggicon"
    >

     <item
        android:id="@+id/action_home"
        android:orderInCategory="97"
        android:showAsAction="never"
        android:title="@string/action_home"/>
    
    <item
        android:id="@+id/action_my_profile"
        android:orderInCategory="98"
        android:showAsAction="never"
        android:title="@string/action_my_profile"/>
    
     <item
        android:id="@+id/action_notifications"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_notifications"/>

     <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout"/>

</menu>