<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cs121.groupgoal.NotificationsActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
    <item
        android:id="@+id/action_my_profile"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_my_profile"/>
    
     <item
        android:id="@+id/action_notifications"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_notifications"/>

</menu>
