<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/goal_post">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goal_name"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:textSize="14sp"
            android:id="@+id/goal_title"
            android:layout_gravity="center_horizontal"
            android:hint="@string/goal_name"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_description"
        android:textSize="20sp"
        android:textStyle="bold"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:textSize="14sp"
            android:id="@+id/goal_description"
            android:layout_gravity="center_horizontal"
            android:hint="@string/goal_description_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        
         <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:textSize="14sp"
            android:id="@+id/goal_location"
            android:layout_gravity="center_horizontal"
            android:hint="@string/location" />
         
         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_private"
                android:textSize="20sp"
                android:textStyle="bold"
				android:layout_marginBottom="10dp"
        		android:layout_marginTop="10dp"
                android:id="@+id/goal_private_label"/>
            
            <CheckBox
                android:id="@+id/goal_checkbox_private"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginStart="10dp"
		        android:layout_marginRight="15dp"
		        android:layout_marginBottom="10dp"
        		android:layout_marginTop="10dp"
		        android:layout_marginEnd="15dp"/>
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_category"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
				android:layout_marginBottom="10dp"
        		android:layout_marginTop="10dp"
                android:id="@+id/goal_category_label"/>
            
            <Spinner
			    android:id="@+id/goal_category_spinner"
			    android:layout_width="200dip"
                android:layout_height="45dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginStart="10dp"
		        android:layout_marginRight="15dp"
		        android:layout_marginBottom="10dp"
        		android:layout_marginTop="10dp"
		        android:layout_marginEnd="15dp"
		        android:text="@string/goal_category"
			    android:background="@android:drawable/btn_dropdown"
			    android:spinnerMode="dropdown" />
                
            </LinearLayout>
         
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_date"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="0.7"
                android:id="@+id/goal_date_label"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal_time"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_weight="0.4"
                android:id="@+id/goal_time_label"
                />
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="0.7"
                android:id="@+id/goal_date"
               	style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:onClick="showDatePickerDialog"
                android:hint="@string/goal_date_hint"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="0.4"
                android:id="@+id/goal_time"
                style="@android:style/Widget.DeviceDefault.Light.Spinner"
                android:onClick="showTimePickerDialog"
                android:hint="@string/goal_time_hint"
                />
            </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <Button
                android:id="@+id/submit_goal_button"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:text="@string/create" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>