<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.cs121.groupgoal.GoalView">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/goal_details_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>
    
    <View
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:background="@color/wet_asphalt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_description"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/goal_details_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:layout_gravity="start" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_location"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/goal_details_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:layout_gravity="start" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_date"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/goal_details_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:layout_gravity="start" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal_owner"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/goal_details_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textAlignment="viewStart"
        android:layout_gravity="start" />
    
    <Button
        android:id="@+id/join_goal_button"
        android:background="@drawable/button"
        android:textColor="#ffffff"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.5"
        android:text="@string/join" />
        
</LinearLayout>