<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/description_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/search_distance"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/searchdistance_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description_textview"
        android:layout_alignStart="@+id/description_textview"
        android:layout_below="@+id/description_textview" />
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:padding="10dp"
	    android:gravity="center_horizontal"
	    android:layout_alignParentBottom="true"
	    >
        <Button
        android:id="@+id/prof_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
  		android:layout_marginTop="40dp"
        android:text="@string/view_profile"/>
        
    <Button
        android:id="@+id/logout_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_marginTop="40dp"
     	android:layout_below="@id/prof_button"
        android:text="@string/logout_full" />
	</LinearLayout>
</RelativeLayout>
